5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4272/executions/1643_2703.log
== TEST (2019-04-08 18:24:38) 
-- CODE:
num = int(input("numero:"))
if: 
	idade = eleitor
else:
	idade = nao_eleitor
	
print(idade.lower())
		
-- ERROR:
File "XXXX", line 2
    if: 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:25:36) 
-- CODE:
num = int(input("numero:"))
if: 
	idade = eleitor
else:
	idade = nao_eleitor
	
print(idade.lower())
		
-- ERROR:
File "XXXX", line 2
    if: 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:26:34) 
-- CODE:
num = int(input("numero:"))
if idade = eleitor:
else:
	idade = nao_eleitor
	
print(idade.lower())
		
-- ERROR:
File "XXXX", line 2
    if idade = eleitor:
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:27:40) 
-- CODE:
num = int(input("numero:"))
if idade = "eleitor":
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- ERROR:
File "XXXX", line 2
    if idade = "eleitor":
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:30:13) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 0)
idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- ERROR:
File "XXXX", line 2
    if (num%2 == 0)
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:30:20) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 0):
idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- ERROR:
File "XXXX", line 3
    idade = "eleitor"
        ^
IndentationError: expected an indented block
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:30:50) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 0):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:31:16) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 1):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:31:27) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 1):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- EXECUTION TIME:
0.187099
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:31:33) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 1):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:33:38) 
-- CODE:
num = int(input("numero:"))
if (num%3 == 0 ):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:33:46) 
-- CODE:
num = int(input("numero:"))
if (num%3 == 0 ):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:33:59) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 2 ):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:34:05) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 2 ):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- EXECUTION TIME:
0.118294
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
nao_eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:37:37) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 0):
   idade = "nao_eleitor"
else:
	idade = "eleitor"
	
print(idade.lower())
		
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:37:44) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 0):
   idade = "nao_eleitor"
else:
	idade = "eleitor"
	
print(idade.lower())
		
-- EXECUTION TIME:
0.209941
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
nao_eleitor
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:38:21) 
-- CODE:
num = int(input("numero:"))

		
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:38:37) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 0):
   idade = "nao_eleitor"

		
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:41:11) 
-- CODE:
num = int(input("numero:"))
if (num%2 == 0):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:45:17) 
-- CODE:
num = int(input("numero:"))
if (num<=18):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:46:24) 
-- CODE:
num = int(input("numero:"))
if (num=>18):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- ERROR:
File "XXXX", line 2
    if (num=>18):
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:46:34) 
-- CODE:
num = int(input("numero:"))
if (num =>18):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- ERROR:
File "XXXX", line 2
    if (num =>18):
            ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:46:42) 
-- CODE:
num = int(input("numero:"))
if (num <=18):
   idade = "eleitor"
else:
	idade = "nao_eleitor"
	
print(idade.lower())
		
-- OUTPUT:
eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-08 18:46:57) 
-- CODE:
num = int(input("numero:"))
if (num <=18):
   idade = "nao_eleitor"
else:
	idade = "eleitor"
	
print(idade.lower())
		
-- OUTPUT:
nao_eleitor
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-08 18:47:03) 
-- CODE:
num = int(input("numero:"))
if (num <=18):
   idade = "nao_eleitor"
else:
	idade = "eleitor"
	
print(idade.lower())
		
-- EXECUTION TIME:
0.150997
-- TEST CASE 1:
---- input:
15
---- correct output:
nao_eleitor
---- user output:
nao_eleitor
-- TEST CASE 2:
---- input:
21
---- correct output:
eleitor
---- user output:
eleitor
-- TEST CASE 3:
---- input:
60
---- correct output:
eleitor
---- user output:
eleitor
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
